sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:3: error: not found: value i
  for (i<- 0 to getNombreValeurs()-2-i ){
                                     ^