sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2(){
  for (i<- 0 to getNombreValeurs()-2-i ){
    for (j<- 0 to i){
      if (plusPetit(j,j+1)==false){
        echange(j,j+1)
      }
    }
  }
}